--- a/Java/WebContent/index.xhtml
+++ b/Java/WebContent/index.xhtml
@@ -8,12 +8,12 @@
 <h:body> 
 <h:form>
 	<h:outputLabel for="matricula">Matricula</h:outputLabel>
-	<h:inputText id="matricula" value="#{aluno.matricula}" /> <br/>
+	<h:inputText id="matricula" value="#{alunoBB.aluno.matricula}" /> <br/>
 	<h:outputLabel for="nome">Nome</h:outputLabel>
-	<h:inputText id="nome" value="#{aluno.nome}" /> <br/>
+	<h:inputText id="nome" value="#{alunoBB.aluno.nome}" /> <br/>
 	<h:outputLabel for="sobrenome">Sobrenome</h:outputLabel>
-	<h:inputText id="sobrenome" value="#{aluno.sobrenome}" /> <br/>
-	<h:commandButton action="Resposta.xhtml" value="Enviar" />
+	<h:inputText id="sobrenome" value="#{alunoBB.aluno.sobrenome}" /> <br/>
+	<h:commandButton action="#{alunoBB.adicionar}" value="Enviar" />
 	
 </h:form>
 </h:body> 
